--- a/style.css
+++ b/style.css
@@ -4,17 +4,32 @@ body{
     background-color: #3B3B3B;
     background-size: 100%;
     font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
+/*------------------ header -------------------*/
+header {
+    background-color: rgba(31, 31, 31, 0.7);
+    color: white;
+    text-align: center;
+}
 
-/*------------------ menu ---------------------*/
+/*------------------- menu --------------------*/
+.menu ul{
+    list-style-type: none;
+    background-color:#1F1F1F;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+
 .menu a {
-    background-color: #1F1F1F;
     color: #969696;
-    display: block;
     text-decoration: none;
-    padding: 10%;
-    width: 90%;
+    padding: 15px;
+    display: block;
+    text-align: center;
 }
 
 .menu a:hover {
@@ -22,69 +37,45 @@ body{
     color: #C4C4C4;
 }
 
-.menu a.active {
-    background-color: #3B3B3B;
-    color: white;
+.menu li {
+    float: left;
 }
 
-.menu {
-    float: left;
-    width: 11%;
-    margin: 0;
-    padding: 0;
+.menu a.active {
+    background-color: #3B3B3B;
+    color:white;
 }
 
 /*------------------ vlakken ------------------*/
-[class*="col-"] {
-    width: 100%
-}
-* {
-    box-sizing: border-box;
-}
-
-header {
-    height: 5%;
-    width: 100%;
-    color: white;
-    text-align: center;
+main {
+    padding: 15px;
     background-color: rgba(31, 31, 31, 0.7);
 }
 
-header a{
-    margin: auto;
-}
-
-/*-----------opmaak artikelen -----------------*/
-article h1{
-    color: whitesmoke;
-}
-
-article p{
-    color: white;
-}
-article a {
-    color: #3B3B3B;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.base {
-    background-color:#1F1F1F;
-    width: 75%;
-    padding: 1%;
-    margin: auto;
-}
-
-h1, h2, h3, h4, p {
-    text-align: left;
+section {
+    margin-bottom: 20px;
+    background: #3B3B3B;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
     color: white;
 }
 
 /*--------------opmaak footer -----------------*/
 
-
-main {
+footer {
+    text-align: center;
+    background-color: #333;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+    bottom: 0;
     width: 100%;
-    margin: 0px;
-    background-color: #1f1f1f;
+}
+
+footer a {
+    color:#C4C4C4;
+    text-decoration: none;
+
 }
