--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 /*------------------- menu --------------------*/
-.menu ul{
+.menu ul {
     list-style-type: none;
     background-color:#1F1F1F;
     padding: 0px;
@@ -77,5 +77,13 @@ footer {
 footer a {
     color:#C4C4C4;
     text-decoration: none;
+}
 
+li a {
+    color:#C4C4C4;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
