--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ main {
 
 section {
     margin-bottom: 20px;
-    background: #3B3B3B;
+    background: rgba(59, 59, 59, 0.95);
     padding: 10px;
     border-radius: 6px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
